--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 						</div>
 						<div class="col-sm-offset-2 col-sm-3">
 							<div> <!--class="single-about-img"-->
-								<img src="assets/images/about/profile_image.jpg" alt="profile_image">
+								<img src="assets/images/about/profile_image.JPG" alt="profile_image">
 								<div class="about-list-icon">
 									<ul>
 										<!--<li>
